# dop_zhu_zad

./: .dockerignore  Dockerfile  README.md  pyproject.toml
dop_zhu_zad/: crud.py  main.py  models.py  schemas.py
tests/: test_api.py
